--- a/config.json
+++ b/config.json
@@ -1,10 +1,17 @@
 {
   "settings": [
     {
-      "enabled": false,
-      "name": "Example Script",
-      "version": "0.1",
-      "code": ""
+      "modelName": "Default",
+      "scripts": [
+        {
+          "enabled": false,
+          "name": "Example Script",
+          "version": "0.1",
+          "description": "My description",
+          "conditions": [],
+          "code": ""
+        }
+      ]
     }
   ]
 }
