Add new "insert stub only" feature

--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
     {
       "modelName": "Default",
       "enabled": false,
+      "insertStub": false,
       "indentSize": 2,
       "scripts": [
         {
